# verii

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
graders/: semantic_grader.py
server/: app.py
