[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifai"
version = "1.0.0"
description = "VerifAI - OpenEnv reinforcement learning environment for AI writing evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.20.0",
    "pyyaml>=6.0.1",
    "sentence-transformers>=2.6.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "openenv-core>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0"
]

[project.scripts]
server = "server.app:main"

